# twisty

./: Cargo.toml  redi_results.txt  rustfmt.toml  setup_hooks.sh
hooks/: pre-commit  pre-push
src/: bandaged_3x3x3_1x2x3.rs  coin_pyraminx.rs  cubesearch.rs  cuboid_2x2x3.rs  cuboid_2x3x3.rs  cuboid_3x3x4.rs  curvy_copter.rs  dino_cube.rs  floppy_1x2x2.rs  floppy_1x2x3.rs  floppy_1x3x3.rs  floppy_1xnxn.rs  idasearch.rs  ivy_cube.rs  main.rs  mirror_pocket_cube.rs  moves.rs  orientations.rs  permutation_helpers.rs  pocket_cube.rs  pyraminx.rs  random_helpers.rs  redi_cube.rs  scrambles.rs  skewb.rs  square_one_shape.rs  square_zero.rs
src/floppy_1xnxn/: tests_133.rs  tests_134.rs
src/idasearch/: heuristic_helpers.rs
src/random_helpers/: permutations.rs
